# flask-video-app

./: .gitignore  README  README.md  Taskfile.yaml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Docker/: docker-compose.yml
app/: factory.py  run.py
app/api/: comment_api.py  login_api.py  routes.py  user_api.py  video_api.py
app/auth/: auth_service.py  decorators.py
app/config/: config.py
app/crud/: comment.py  user.py  video.py
app/error/: error_handlers.py
app/log/: log_handlers.py
app/models/: models.py
app/schemas/: auth.py  s3.py  user.py  validators.py  video.py
app/service/: cloudwatch.py  s3.py  thumbnail_generator.py  user_service.py  video_service.py  video_utils.py
app/static/css/: edit_user.css  home copyhuhuihuihu.css  home.css  navbar.css  new_register.css  select_after.css  select_movie.css  upload.css  user_management.css
app/static/js/: comments.js  comments＿A.js  sidebar_toggle.js  upload.js
app/templates/: 404.html  500.html  base.html  edit_user.html  home.html  login.html  new_register.html  select_after.html  select_movie.html  upload.html  user_management.html
app/templates/partials/: navbar.html
app/utils/: env.py  timezone.py
docs/: uv.md
tools/localstack/: localstack.py
